--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-session": "^1.15.0",
+    "express-validator": "*",
+    "express-handlebars": "*",
     "jade": "~1.11.0",
     "moment": "^2.17.1",
+    "moment-timezone": "^0.5.11",
     "mongoose": "^4.7.7",
+    "mongoose-validator":"*",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
