--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-restify-mongoose": "^4.1.3",
     "express-session": "^1.15.0",
     "express-validator": "*",
     "express-handlebars": "*",
     "jade": "~1.11.0",
+    "method-override": "^2.3.7",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "mongoose": "^4.7.7",
